# mkv2cast

./: .gitignore  CHANGELOG.md  GPG-KEY.md  LICENSE  Makefile  README.md  build_hook.py  install.sh  mkv2cast.py  public-key.gpg  pyproject.toml  requirements.txt  uninstall.sh
.github/workflows/: aur.yml  ci.yml  deb.yml  docs.yml
apt/: README.md  index.html
apt/dists/stable/: Release
apt/dists/stable/main/binary-all/: Packages
apt/pool/main/: mkv2cast_1.2.7-2-1_all.deb
build-deb-artifacts/: mkv2cast_1.2.7-3-1_all.deb  mkv2cast_1.2.7-4-1_all.deb  mkv2cast_1.2.9-2-1_all.deb
completions/: _mkv2cast  mkv2cast.bash
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-all/: Packages
dists/stable/main/binary-amd64/: Packages
dists/stable/main/binary-arm64/: Packages
docs/: .gitkeep  Makefile  conf.py  contributing.rst  index.rst  package-signing.md
docs/api/: index.rst
docs/getting-started/: configuration.rst  installation.rst  quickstart.rst
docs/usage/: advanced.rst  basic.rst  filtering.rst  hardware-acceleration.rst  library-guide.rst  python-api.rst
man/: mkv2cast.1
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  copyright  rules
pool/main/: mkv2cast_1.2.7-2-1_all.deb  mkv2cast_1.2.8-2-1_all.deb  mkv2cast_1.2.9-1-1_all.deb
scripts/: bump_version.sh  export_gpg_key.sh  generate_gpg_key.sh  parse_version.sh
src/mkv2cast/: __init__.py  __main__.py  cli.py  config.py  converter.py  history.py  i18n.py  integrity.py  json_progress.py  notifications.py  pipeline.py  watcher.py
src/mkv2cast/locales/de/LC_MESSAGES/: mkv2cast.mo  mkv2cast.po
src/mkv2cast/locales/en/LC_MESSAGES/: mkv2cast.mo  mkv2cast.po
src/mkv2cast/locales/es/LC_MESSAGES/: mkv2cast.mo  mkv2cast.po
src/mkv2cast/locales/fr/LC_MESSAGES/: mkv2cast.mo  mkv2cast.po
src/mkv2cast/locales/it/LC_MESSAGES/: mkv2cast.mo  mkv2cast.po
src/mkv2cast/ui/: __init__.py  legacy_ui.py  rich_ui.py  simple_rich.py
systemd/: mkv2cast-cleanup-system.service  mkv2cast-cleanup-system.timer  mkv2cast-cleanup.service  mkv2cast-cleanup.timer  mkv2cast-watch.service  mkv2cast-watch.timer
tests/: conftest.py  test_cli.py  test_config.py  test_converter.py  test_history.py  test_i18n.py  test_integrity.py  test_notifications.py  test_pipeline.py  test_ui.py
